# SOBay

./: CMakeLists.txt  autores.txt  backend  backend.c  backend.h  black_friday  frontend  frontend.c  frontend.h  init.txt  items.txt  makefile  promotor.txt  promotores.txt  struct.h  users.txt  utils.c  utils.h
